--- a/quickstart/recommendation/pytorch/dlrm/requirements.txt
+++ b/quickstart/recommendation/pytorch/dlrm/requirements.txt
@@ -1,6 +1,6 @@
 future
 numpy
+scikit-learn>=1.5.0
 torch
-wheel==0.38.0 # Included this to avoid a vulnerability
-scikit-learn
 tqdm
+wheel==0.38.0 # upgraded to avoid a vulnerability
