--- a/quickstart/recommendation/pytorch/memrec_dlrm/requirements.txt
+++ b/quickstart/recommendation/pytorch/memrec_dlrm/requirements.txt
@@ -1,10 +1,10 @@
 future==0.18.3
 numpy==1.26.0
-onnx==1.15.0  #Upgraded to avoid vulnerability
+onnx==1.16.0  #Upgraded to avoid vulnerability
 pydot==1.4.2
+scikit-learn==1.5.0
+tensorboard==2.14.0
 torch==2.0.1
 torchviz==0.0.2
-scikit-learn==1.3.0
-tqdm==4.66.1
-tensorboard==2.14.0
-wheel==0.38.1
+tqdm==4.66.3
+wheel==0.38.1 # upgraded to avoid a vulnerability
